# global-scripts

./: .gitignore  pyproject.toml
global_scripts/: build_repo_prompt.py
tests/: test_build_repo_prompt.py
